Addet GeoIP tool

--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "description": "En- and Decode Texts",
   "main": "main.js",
   "scripts": {
-      "start": "node main.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "pkg": {
-      "assets": [
-          "src/*"
-      ],
-      "output": "dist"
+    "assets": [
+      "src/*"
+    ],
+    "output": "dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "edit-json-file": "^1.7.0",
-    "inquirer": "^8.2.2"
+    "inquirer": "^8.2.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
