--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,5 @@
   "lang": "de",
   "key1": "D9R4R0w§?YEYBk7d?x7!2>&gNb}A}c:F",
   "key2": "U$Y7ncrn$!#(jQ00zDNCTDZUruaNJeb3",
-  "key3": "12345678901234567890123456789012"
+  "key3": "J+tGP>rX}K$<.D$}§h,xj:Q#5$hb{pwZ"
 }
