--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "lang": "de",
-  "key1": "D9R4R0w§?YEYBk7d?x7!2>&gNb}A}c:F",
-  "key2": "U$Y7ncrn$!#(jQ00zDNCTDZUruaNJeb3",
-  "key3": "J+tGP>rX}K$<.D$}§h,xj:Q#5$hb{pwZ"
+  "key1": "hGY!yT6sCkppYB0Jq0S7BNFveN0BX0ha",
+  "key2": "fS5kdjsC8Wu+0SPxRVX7Y0Tq38Jfx3r0",
+  "key3": "Ss3Knx!9EgdYFG4RmfWNp5nwd+wAKMaE"
 }
