--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "lang": "de",
+  "lang": "en",
   "key1": "hGY!yT6sCkppYB0Jq0S7BNFveN0BX0ha",
   "key2": "fS5kdjsC8Wu+0SPxRVX7Y0Tq38Jfx3r0",
   "key3": "Ss3Knx!9EgdYFG4RmfWNp5nwd+wAKMaE"
