--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,9 @@
 {
-  "lang": "en",
+  "lang": "de",
   "key1": "hGY!yT6sCkppYB0Jq0S7BNFveN0BX0ha",
   "key2": "fS5kdjsC8Wu+0SPxRVX7Y0Tq38Jfx3r0",
-  "key3": "Ss3Knx!9EgdYFG4RmfWNp5nwd+wAKMaE"
+  "key3": "Ss3Knx!9EgdYFG4RmfWNp5nwd+wAKMaE",
+  "iv1": "41f9d3372ec8e62eaa45881f67275254",
+  "iv2": "cf128d51de78a639cf176e2443e7d4d0",
+  "iv3": "2bf61d78f50536814dfdf5c0efddfff4"
 }
