--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "src/lang/en.json",
       "src/lang/de.json"
     ],
-    "output": "dist"
+    "output": "dist",
+    "targets": [ "node16-linux-x64", "node16-windows-x64", "node16-debian-x64"  ]
   },
   "keywords": [],
   "author": "",
