--- a/package.json
+++ b/package.json
@@ -9,16 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "pkg": {
-    "assets": [
-      "src/*",
-      "./main.js",
-      "src/config.json",
-      "src/lang/es.json",
-      "src/lang/en.json",
-      "src/lang/de.json"
-    ],
+    "assets": [],
     "output": "dist",
-    "targets": [ "node16-linux-x64", "node16-windows-x64", "node16-debian-x64"  ]
+    "targets": [ "node16-windows-x64" ]
   },
   "keywords": [],
   "author": "",
