--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "pkg": {
     "assets": [],
     "output": "dist",
-    "targets": [ "node16-windows-x64" ]
+    "targets": [
+      "node16-windows-x64"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,9 @@
   "dependencies": {
     "edit-json-file": "^1.7.0",
     "inquirer": "^8.2.2",
+    "node-notifier": "^10.0.1",
+    "popups": "^1.1.3",
+    "uuid": "^8.3.2",
     "xmlhttprequest": "^1.8.0"
   }
 }
