--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "output": "dist",
     "targets": [
       "node16-windows-x64",
-      "node16-linux-x64"
+      "node16-linux-x64",
+      "node16-macos-x64"
 
     ]
   },
