--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
       "node16-windows-x64",
       "node16-linux-x64",
       "node16-macos-x64"
-
     ]
   },
   "keywords": [],
@@ -23,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "edit-json-file": "^1.7.0",
+    "fast-speedtest-api": "^0.3.2",
     "inquirer": "^8.2.2",
     "node-notifier": "^10.0.1",
     "uuid": "^8.3.2",
