--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "edit-json-file": "^1.7.0",
     "fast-speedtest-api": "^0.3.2",
     "inquirer": "^8.2.2",
+    "node-loading": "^1.1.1",
     "node-notifier": "^10.0.1",
     "uuid": "^8.3.2",
     "xmlhttprequest": "^1.8.0"
