--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 
 # Release
-secrettexts-win.exe
-secrettexts-linux
-secrettexts.exe
+cybertools-win.exe
+cybertools-linux
+cybertools.exe
+cybertools-macos
 
 
 
