--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cybertools",
+  "name": "nodetools",
   "bin": "main.js",
   "version": "1.0.0",
   "description": "Multitool",
@@ -12,9 +12,9 @@
     "assets": [],
     "output": "dist",
     "targets": [
-      "node16-windows-x64",
-      "node16-linux-x64",
-      "node16-macos-x64"
+      "node18-windows-x64",
+      "node18-linux-x64",
+      "node18-macos-x64"
     ]
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "inquirer": "^8.2.4",
     "node-loading": "^1.1.1",
     "node-notifier": "^10.0.1",
+    "qrcode": "^1.5.1",
     "uuid": "^9.0.0",
     "xmlhttprequest": "^1.8.0"
   }
