--- a/src/config.json
+++ b/src/config.json
@@ -6,5 +6,7 @@
   "iv1": "41f9d3372ec8e62eaa45881f67275254",
   "iv2": "cf128d51de78a639cf176e2443e7d4d0",
   "iv3": "2bf61d78f50536814dfdf5c0efddfff4",
-  "name": "NodeTools"
+  "name": "NodeTools",
+  "steganokey": "h/}vS|8vc8^%Sm^*+207Ej[H/t??2F.+",
+  "steganoiv": "41f9d3372ec8e62eaa45881f67275254"
 }
