--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 
 # Release
-cybertools-win.exe
-cybertools-linux
-cybertools.exe
-cybertools-macos
+nodetools-win.exe
+nodetools-linux
+nodetools.exe
+nodetools-macos
 
 
 
