Now using Electron
Removed old files and renamed function.js to modules.js

--- a/package.json
+++ b/package.json
@@ -5,32 +5,50 @@
   "description": "Multitool",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "build": "electron-builder"
   },
-  "pkg": {
-    "assets": [],
-    "output": "dist",
-    "targets": [
-      "node18-windows-x64",
-      "node18-linux-x64",
-      "node18-macos-x64"
+  "build": {
+    "appId": "com.electron.nodetools",
+    "productName": "NodeTools",
+    "directories": {
+      "output": "dist"
+    },
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "icon": "build/icon.icns"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
+    },
+    "linux": {
+      "target": "deb",
+      "icon": "build/icon.png",
+      "maintainer": "iTzPhil",
+      "executableName": "NodeTools",
+      "desktop": {
+        "Name": "NodeTools",
+        "Comment": "Multi purpose tool build with Node and Electron",
+        "Terminal": "false",
+        "Type": "Application",
+        "Icon": "build/icon.png"
+      }
+    },
+    "files": [
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "clipboardy": "^2.3.0",
-    "edit-json-file": "^1.7.0",
-    "fast-speedtest-api": "^0.3.2",
     "generate-password": "^1.7.0",
-    "inquirer": "^8.2.4",
-    "node-loading": "^1.1.1",
-    "node-notifier": "^10.0.1",
     "qrcode": "^1.5.1",
     "steggy": "^2.0.1",
     "uuid": "^9.0.0",
     "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "electron": "^25.3.2"
   }
 }
